--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>
     Kovalev Daniil
   </title>
+  <link href='https://fonts.googleapis.com/css?family=Khula' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Noto+Sans+JP' rel='stylesheet'>
 </head>
